<resources>
    <string name="app_name">calc</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_plus">+</string>
    <string name="_minus">-</string>
    <string name="_multiply">*</string>
    <string name="_div">/</string>
    <string name="_result">=</string>
    <string name="_brackets">()</string>
    <string name="_point">.</string>
    <string name="_degree">^</string>
    <string name="_back">←</string>
    <string name="_clear">C</string>
    <string name="_sqrt">√</string>
    <string name="_sin">sin</string>
    <string name="_cos">cos</string>
    <string name="_tan">tan</string>
    <string name="_settings">⚙</string>
    <string name="_setDarkTheme">Включить темную тему</string>
    <string name="_setLightTheme">Включить светлую тему</string>
    <string name="_btnBack">Назад</string>

</resources>