<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivitySecond">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/horizontal_margin"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/lightThemeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_setLightTheme" />

        <RadioButton
            android:id="@+id/darkThemeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_setDarkTheme" />
    </RadioGroup>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/vertical_margin"

        android:text="@string/_btnBack" />

</androidx.appcompat.widget.LinearLayoutCompat>